# kuda

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  README.md  commands  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yaml
data/: README.md
data/workout_links/: example.json  parse_test.json
data/workout_links/parsed/: asnyc_test_run.json  parse_test.json
data_engineering/scripts/: async_scraper_test_runs.py  exercise_scraper_test_runs.py  scraper_test_runs.py  workout_link_enhance_data.py  workout_parse_test_runs.py  workout_tree_parse_test_runs.py
kuda/: pyproject.toml
kuda/scrapers/: __init__.py  async_scrape.py
kuda/scrapers/highrise/: exercise_html_parser.py  exercise_link_scraper.py  exericse_scraper.py  user_scraper.py  workout_html_parser.py
kuda/scrapers/scrapyard/: scrape_workout.py  scrape_workout_links.py
kuda/scrapers/users/: scraper.py
kuda/scrapers/workout/: parser.py  scraper.py
kuda/scrapers/workout_link/: scraper.py
phase_zero/: README.md
phase_zero/data/workout_links/: README.md
phase_zero/scripts/scrapers/: 200-Scrape-Workout.ipynb
scripts/: README.md
scripts/data_parsers/: workout_link_enhance_data.py
scripts/scrapers/data_parsers/: workout_link_add_username_col.py  (+1 more)
test/: requirements.txt  vars.py
test/files/: tested_workout_links.json
test/scrapers/: test_workout_scraper.py
tests/: requirements.txt  vars.py
tests/files/: tested_workout_links.json
tests/scrapers/: __init__.py  test_async_scrape.py  test_workout_scraper.py
tests/utils/: functions.py  test_objects.py
(+13 files in other folders)
