[project]
name = "kuda"
version = "1.0.0"
dependencies = [
	"pandas==2.0.3",
	"beautifulsoup4==4.12.2",
	"lxml==4.9.3",
	"requests==2.31.0",
]

[tool.setuptools.packages]
find = {} 

[tool.black]
line-length = 79
target-version = ['py311']

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true
